[package]
name = "rapier3d-dae"
version = "0.1.0"
authors = ["Intrepid AI <hello@intrepid.ai>"]
description = "Collada (.dae) file loader for the 3D rapier physics engine."
# documentation = "https://docs.rs/rapier3d-dae"
# homepage = "https://rapier.rs"
# repository = "https://github.com/dimforge/rapier"
readme = "README.md"
categories = ["science", "game-development", "mathematics", "simulation", "wasm"]
keywords = ["physics", "joints", "multibody", "robotics", "urdf"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
thiserror = "1.0.61"
stl_io = "0.7"
dae-parser = "0.9.0"

rapier3d = { version = "0.22", path = "../rapier3d" }
